# youtube_analyzer

./: .gitignore  .gitmodules  Dockerfile  README.md  build_image.sh  cron_script.sh  docker-compose.yml  pyproject.toml
youtube_analyzer/: __main__.py  channels_to_parse.json  main.py  settings.py
youtube_analyzer/schema/: channel_sections.py  channels.py  data.py  playlist_items.py  videos.py
youtube_analyzer/utils/: data_handler.py  logger.py  send_mail.py  yapi.py
